# backend

./: .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  docker-compose-postgres.yaml  pyproject.toml
env/: .env.template
src/: main.py
src/api/: __init__.py  dependencies.py
src/api/routes/: test.py
src/core/: config.py
src/migrations/: env.py
src/migrations/versions/: f441e4689f7c_init_user_model.py
src/models/: types.py  user.py
